Added docker image name

--- a/k8s manifests/deployment.yaml
+++ b/k8s manifests/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: scar-rental-app
-        image: REPLACE_ME:openjdk:8-jre-alpine
+        image: stakater/carbook:openjdk:8-jre-alpine
         ports:
         - containerPort: 8080
