--- a/k8s manifests/service.yaml
+++ b/k8s manifests/service.yaml
@@ -1,12 +1,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: spring-web-socket-keycloak
+  name: car-rental-app
 spec:
   selector:
   # This label is used by Service to connect to pod, 
   # If you change it, so change in deployment's spec labels as well.
-    app: spring-web-socket-keycloak
+    app: car-rental-app
   ports:
   - name: web
     port: 8080
